deploy/k8s/overlays/prod/patch-prod.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eda-playground
spec:
  template:
    spec:
      containers:
        - name: eda-playground
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
