deploy/k8s/overlays/prod/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: eda-playground
  labels:
    app: eda-playground
    app.kubernetes.io/name: eda-playground
    app.kubernetes.io/component: web
spec:
  to:
    kind: Service
    name: eda-playground
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
